--- a/cowrie.cfg
+++ b/cowrie.cfg
@@ -861,13 +861,13 @@ source = cowrie
 
 # HPFeeds3
 # Python3 implementation of HPFeeds
-[output_hpfeeds3]
+[output_hpfeeds]
 enabled = true
 server = hostage-cti.es.aau.dk
 port = 20000
 identifier = mhn
 secret = xbI6272cUN6
-debug=false
+channel = mhn
 
 
 # VirusTotal output module
