--- a/cowrie.cfg
+++ b/cowrie.cfg
@@ -659,17 +659,18 @@ enabled = true
 # See https://twistedmatrix.com/documents/current/core/howto/endpoints.html#servers
 # (default: listen_endpoints = tcp:2223:interface=0.0.0.0)
 # (use systemd: endpoint for systemd activation)
-# listen_endpoints = systemd:domain=INET:index=0
-# For IPv4 and IPv6: listen_endpoints = tcp6:2223:interface=\:\: tcp:2223:interface=0.0.0.0
+ listen_endpoints = systemd:domain=INET:index=0
+# For IPv4 and IPv6: 
+listen_endpoints = tcp6:2223:interface=\:\: tcp:2223:interface=0.0.0.0
 # Listening on multiple endpoints is supported with a single space seperator
 # e.g "listen_endpoints = tcp:2223:interface=0.0.0.0 tcp:2323:interface=0.0.0.0" will result listening both on ports 2223 and 2323
 # use authbind for port numbers under 1024
 
-listen_endpoints = tcp:2223:interface=0.0.0.0
+#listen_endpoints = tcp:2223:interface=0.0.0.0
 
 
 # Source Port to report in logs (useful if you use iptables to forward ports to Cowrie)
-#reported_port = 23
+reported_port = 23
 
 
 
@@ -861,14 +862,13 @@ source = cowrie
 
 # HPFeeds3
 # Python3 implementation of HPFeeds
-[output_hpfeeds3]
+[output_hpfeeds]
 enabled = true
-server = hostage-cti.es.aau.dk
-port = 20000
-identifier = mhn
-secret = xbI6272cUN6
+server = $HPF_HOST
+port = $HPF_PORT
+identifier = $HPF_IDENT
+secret = $HPF_SECRET
 debug = false
-channel = mhn
 
 
 # VirusTotal output module
